# docs

./: .gitignore  404.html  README.md  docusaurus.config.ts  index.html  package-lock.json  package.json  sidebar.js  sitemap.xml  snipsync.config.yaml  vercel.json
assets/css/: styles.7b70328b.css
assets/js/: 07ecc3ac.7055fde1.js  07ecc3ac.e46eb81e.js  159ebc1f.1cc3d852.js  17896441.42c44a72.js  17c69feb.99e2293d.js  1a27c6c0.7bd8db52.js  1ab87bf4.316b260b.js  1ab87bf4.3b73db4e.js  354805c3.ed31dbee.js  4920bf56.316471ba.js  4920bf56.aa28ee94.js  4b7a0626.5ae266bb.js  7aae4645.76100267.js  935f2afb.2fbfd96e.js  935f2afb.7832eddb.js  ab016208.d4cd702a.js  bbc969c3.e9637b9a.js  dc35438a.a706c555.js  fbd7a87c.60428b42.js  fbd7a87c.fe7f72df.js  main.926a7684.js  runtime~main.235cce55.js  runtime~main.93e935e4.js  runtime~main.d870c92c.js
category/getting-started/: index.html
category/resonate-server/: index.html
category/resources/: index.html
category/sdks/: index.html
css/: custom.css
docs/: architecture.mdx  concepts.md  deployment.md  dialing-up-the-reliabilty.md  error-codes.md  evaluate-resonate.md  evaluate-resonate.mdx  explanation-durable-promise.mdx  get-started-typescript.mdx  get-started.mdx  getting-started.mdx  index.mdx  intro.md  observability.md  overview.md  server-architecture.mdx  server-kubernetes-deployment.md  typescript-sdk-quickstart.md  typescript-sdk.mdx  typescript.md
docs/SDKs/: _category_.json  durable-event-loop.md  javscript.md  rust.md  typescript.md
docs/concepts/: _category_.json  application-node.mdx  call-graph.mdx  distributed-async-await.mdx  durable-promise.mdx  failure-detection-and-recovery.mdx  function-versioning.mdx  index.mdx  python-sdk.mdx
docs/develop/: _category_.json  (+3 more)
docs/get-started/python-quickstart/code/part-1/: pyproject.toml
docs/get-started/python-quickstart/code/part-1/src/summarize/: app.py  gateway.py
docs/get-started/python-quickstart/code/part-3/: README.md  pyproject.toml
docs/get-started/python-quickstart/code/part-3/src/summarize/: app_node_1.py  app_node_2.py
docs/get-started/python-quickstart/part-1/summary/: README.md  pyproject.toml
docs/get-started/python-quickstart/part-1/summary/src/summary/: __init__.py  __main__.py
(+118 files in other folders)
